enable thinking by default

--- a/.pi/agent/settings.json
+++ b/.pi/agent/settings.json
@@ -6,6 +6,6 @@
   "packages": [
     "npm:pi-subagents"
   ],
-  "defaultThinkingLevel": "off",
+  "defaultThinkingLevel": "medium",
   "showHardwareCursor": true
 }
